--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
   <inceptionYear>2008</inceptionYear>
   <properties>
     <scala.version>2.11.8</scala.version>
+    <kafka.version>0.9.0.0</kafka.version>
   </properties>
 
   <dependencies>
@@ -13,6 +14,13 @@
       <groupId>org.scala-lang</groupId>
       <artifactId>scala-library</artifactId>
       <version>${scala.version}</version>
+    </dependency>
+
+    <!-- kafka 依赖 -->
+    <dependency>
+      <groupId>org.apache.kafka</groupId>
+      <artifactId>kafka_2.11</artifactId>
+      <version>${kafka.version}</version>
     </dependency>
   </dependencies>
 
