--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
   <properties>
     <scala.version>2.11.8</scala.version>
     <kafka.version>0.9.0.0</kafka.version>
+    <spark.version>2.2.0</spark.version>
   </properties>
 
   <dependencies>
@@ -21,6 +22,24 @@
       <groupId>org.apache.kafka</groupId>
       <artifactId>kafka_2.11</artifactId>
       <version>${kafka.version}</version>
+    </dependency>
+
+    <!--  Spark Streaming 依赖 -->
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-streaming_2.11</artifactId>
+      <version>${spark.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.fasterxml.jackson.module</groupId>
+      <artifactId>jackson-module-scala_2.11</artifactId>
+      <version>2.6.5</version>
+    </dependency>
+    <dependency>
+      <groupId>net.jpountz.lz4</groupId>
+      <artifactId>lz4</artifactId>
+      <version>1.3.0</version>
     </dependency>
   </dependencies>
 
