--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,14 @@
       <version>${spark.version}</version>
     </dependency>
 
+    <!--  Spark SQL 依赖 -->
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-sql_2.11</artifactId>
+      <version>${spark.version}</version>
+    </dependency>
+
+    <!-- nc socket 相关依赖 -->
     <dependency>
       <groupId>com.fasterxml.jackson.module</groupId>
       <artifactId>jackson-module-scala_2.11</artifactId>
@@ -40,6 +48,13 @@
       <groupId>net.jpountz.lz4</groupId>
       <artifactId>lz4</artifactId>
       <version>1.3.0</version>
+    </dependency>
+
+    <!-- mysql jdbc 依赖-->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>5.1.38</version>
     </dependency>
   </dependencies>
 
