--- a/pom.xml
+++ b/pom.xml
@@ -1,27 +1,55 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com</groupId>
-  <artifactId>spark</artifactId>
+  <groupId>com.imooc.spark</groupId>
+  <artifactId>sparktrain</artifactId>
   <version>1.0</version>
   <inceptionYear>2008</inceptionYear>
   <properties>
     <scala.version>2.11.8</scala.version>
     <kafka.version>0.9.0.0</kafka.version>
     <spark.version>2.2.0</spark.version>
+    <hadoop.version>2.6.0-cdh5.7.0</hadoop.version>
+    <hbase.version>1.2.0-cdh5.7.0</hbase.version>
   </properties>
-
+  <!-- 添加cloudera的repository -->
+  <repositories>
+    <repository>
+      <id>cloudera</id>
+      <url>
+        https://repository.cloudera.com/artifactory/cloudera-repos
+      </url>
+    </repository>
+  </repositories>
   <dependencies>
     <dependency>
       <groupId>org.scala-lang</groupId>
       <artifactId>scala-library</artifactId>
       <version>${scala.version}</version>
     </dependency>
-
-    <!-- kafka 依赖 -->
+    <!--  Kafka 依赖 -->
     <dependency>
-      <groupId>org.apache.kafka</groupId>
-      <artifactId>kafka_2.11</artifactId>
-      <version>${kafka.version}</version>
+        <groupId>org.apache.kafka</groupId>
+        <artifactId>kafka_2.11</artifactId>
+        <version>${kafka.version}</version>
+    </dependency>
+
+    <!--  Hadoop 依赖 -->
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-client</artifactId>
+      <version>${hadoop.version}</version>
+    </dependency>
+
+    <!--  HBase 依赖 -->
+    <dependency>
+      <groupId>org.apache.hbase</groupId>
+      <artifactId>hbase-client</artifactId>
+      <version>${hbase.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.hbase</groupId>
+      <artifactId>hbase-server</artifactId>
+      <version>${hbase.version}</version>
     </dependency>
 
     <!--  Spark Streaming 依赖 -->
@@ -31,6 +59,30 @@
       <version>${spark.version}</version>
     </dependency>
 
+    <!--  Spark Streaming整合Flume 依赖 -->
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-streaming-flume_2.11</artifactId>
+      <version>${spark.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-streaming-flume-sink_2.11</artifactId>
+      <version>${spark.version}</version>
+    </dependency>
+
+    <!-- spark streaming 整合 kafka 依赖 -->
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-streaming-kafka-0-8_2.11</artifactId>
+      <version>${spark.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.5</version>
+    </dependency>
+
     <!--  Spark SQL 依赖 -->
     <dependency>
       <groupId>org.apache.spark</groupId>
@@ -38,7 +90,7 @@
       <version>${spark.version}</version>
     </dependency>
 
-    <!-- nc socket 相关依赖 -->
+    <!-- nc netcat 依赖 -->
     <dependency>
       <groupId>com.fasterxml.jackson.module</groupId>
       <artifactId>jackson-module-scala_2.11</artifactId>
@@ -50,17 +102,25 @@
       <version>1.3.0</version>
     </dependency>
 
-    <!-- mysql jdbc 依赖-->
+    <!-- mysql jdbc 依赖 -->
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>5.1.38</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.flume.flume-ng-clients</groupId>
+      <artifactId>flume-ng-log4jappender</artifactId>
+      <version>1.6.0</version>
+    </dependency>
   </dependencies>
-
   <build>
-    <sourceDirectory>src/main/scala</sourceDirectory>
-    <testSourceDirectory>src/test/scala</testSourceDirectory>
+    <!--
+
+            <sourceDirectory>src/main/scala</sourceDirectory>
+            <testSourceDirectory>src/test/scala</testSourceDirectory>
+
+    -->
     <plugins>
       <plugin>
         <groupId>org.scala-tools</groupId>
