--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,16 @@
       <version>${hbase.version}</version>
     </dependency>
 
+    <!-- spark hive 依赖 -->
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-hive_2.11</artifactId>
+      <version>${spark.version}</version>
+      <!--
+      <scope>provided</scope>
+      -->
+    </dependency>
+
     <!--  Spark Streaming 依赖 -->
     <dependency>
       <groupId>org.apache.spark</groupId>
