--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,25 @@
       <artifactId>flume-ng-log4jappender</artifactId>
       <version>1.6.0</version>
     </dependency>
+
+    <!-- Ip 地址处理 -->
+    <dependency>
+      <groupId>com.ggstar</groupId>
+      <artifactId>ipdatabase</artifactId>
+      <version>1.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-ooxml</artifactId>
+      <version>3.14</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi</artifactId>
+      <version>3.14</version>
+    </dependency>
   </dependencies>
   <build>
     <!--
