--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,13 @@
       <version>${hbase.version}</version>
     </dependency>
 
+    <!-- spark core -->
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-core_2.11</artifactId>
+      <version>${spark.version}</version>
+    </dependency>
+
     <!-- spark hive 依赖 -->
     <dependency>
       <groupId>org.apache.spark</groupId>
