--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,20 @@
       <artifactId>poi</artifactId>
       <version>3.14</version>
     </dependency>
+
+    <!-- activemq 依赖 -->
+    <dependency>
+      <groupId>org.apache.activemq</groupId>
+      <artifactId>activemq-all</artifactId>
+      <version>5.9.0</version>
+    </dependency>
+
+    <!-- jms 依赖 -->
+    <dependency>
+      <groupId>javax.jms</groupId>
+      <artifactId>jms</artifactId>
+      <version>1.1</version>
+    </dependency>
   </dependencies>
   <build>
     <!--
