--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.imooc.spark</groupId>
-  <artifactId>sparktrain</artifactId>
+  <groupId>com.spark-learn</groupId>
+  <artifactId>spark-learn</artifactId>
   <version>1.0</version>
   <inceptionYear>2008</inceptionYear>
   <properties>
