--- a/pom.xml
+++ b/pom.xml
@@ -40,9 +40,14 @@
     <dependency>
       <groupId>com.typesafe.akka</groupId>
       <artifactId>akka-actor_2.11</artifactId>
-      <version>2.4.11.2</version>
+      <version>2.3.14</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.typesafe.akka</groupId>
+      <artifactId>akka-remote_2.11</artifactId>
+      <version>2.3.14</version>
+    </dependency>
 
     <!--  Kafka 依赖 -->
     <dependency>
